[package]
name = "rttrust"
version = "0.1.0"
authors = ["Chengzhi Tan <tcz717@hotmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/tcz717/rttrust"
description = "Rust wrapper for rt-thread"
homepage = "https://github.com/tcz717/rttrust"

exclude = [
    "rt-thread/bsp/*",
    "rt-thread/examples/*",
    "rt-thread/documentation/*",
    "rt-thread/tools/*"
]

[lib]
crate-type = ["staticlib", 'rlib']

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
cty = "0.2"
arrayvec = { version = "0.5", default-features = false }
bitflags = "1"

[build-dependencies]
bindgen = "0.54"
log = "0"
simple_logger = "1"


[features]
default = ["alloc"]
custom-panic = []
alloc = []
