[package]
name = "rttrust"
version = "0.1.2"
authors = ["Chengzhi Tan <tcz717@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tcz717/rttrust"
description = "Rust wrapper for rt-thread"
homepage = "https://github.com/tcz717/rttrust"
keywords = ["no-std", "rt-thread", "wrapper", "embedded"]
categories = ["api-bindings", "embedded", "os"]
exclude = [
    "rt-thread/**/*",
    "!rt-thread/include/**/*.h",
    "!rt-thread/components/**/*.h"
]

[lib]
crate-type = ['rlib']

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
cty = "0.2"
arrayvec = { version = "0.5", default-features = false }
bitflags = "1"
cfg-if = "0.1.10"
genio = { version = "0", default-features = false, optional = true }

[build-dependencies]
bindgen = "0.54"
log = "0"
simple_logger = "1"

[dev-dependencies]
mockall = { version = "0.7", features = ["nightly"] }

[features]
default = ["alloc", "io"]
custom-panic = []
alloc = []
io = ["genio"]
